[gd_scene load_steps=6 format=3 uid="uid://gcjunndw6jc7"]

[ext_resource type="Script" path="res://towers/towers/discShooter.gd" id="1_g2ggk"]
[ext_resource type="Texture2D" uid="uid://dvxdyo2rrwf4m" path="res://images/DiscShooter.png" id="2_0a7ko"]
[ext_resource type="Texture2D" uid="uid://d30yqw72fwwi4" path="res://images/circle.png" id="3_ecgw0"]

[sub_resource type="CircleShape2D" id="CircleShape2D_0k1ym"]
radius = 370.0

[sub_resource type="CircleShape2D" id="CircleShape2D_74q31"]
radius = 51.25

[node name="discShooter" type="CharacterBody2D" groups=["towers"]]
scale = Vector2(0.8, 0.8)
collision_layer = 10
collision_mask = 3
script = ExtResource("1_g2ggk")

[node name="noticeArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="noticeArea"]
position = Vector2(-0.37542, -0.0834274)
shape = SubResource("CircleShape2D_0k1ym")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_74q31")

[node name="shootDelay" type="Timer" parent="."]
wait_time = 0.3

[node name="DiscShooter" type="Sprite2D" parent="."]
position = Vector2(7.10543e-15, -8.75001)
scale = Vector2(0.85, 0.8375)
texture = ExtResource("2_0a7ko")

[node name="Marker2D" type="Marker2D" parent="DiscShooter"]
position = Vector2(-2.98023e-08, -88.2353)
scale = Vector2(1.17647, 1.17647)

[node name="noticeCircle" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.313726)
position = Vector2(0.348101, -1.15697)
scale = Vector2(1.47854, 1.47898)
texture = ExtResource("3_ecgw0")

[connection signal="body_entered" from="noticeArea" to="." method="_on_notice_area_body_entered"]
[connection signal="body_exited" from="noticeArea" to="." method="_on_notice_area_body_exited"]
[connection signal="timeout" from="shootDelay" to="." method="_on_shoot_delay_timeout"]
